[GTK][WPE] Main thread can't start rendering the next frame until the previous one is composited https://bugs.webkit.org/show_bug.cgi?id=273317

Reviewed by Carlos Garcia Campos.

All the content rendered by the main thread is sent to the compositor thread
using commitSceneState, which adds a requestID parameter. The compositor will
send in the didRenderFrame call the last requestID it processed. This way
the LayerTreeHost can check whether each request was composed to allow
rendering new frames.

* Source/WebKit/Shared/CoordinatedGraphics/threadedcompositor/ThreadedCompositor.cpp:
(WebKit::ThreadedCompositor::renderLayerTree):
(WebKit::ThreadedCompositor::updateSceneState):
* Source/WebKit/Shared/CoordinatedGraphics/threadedcompositor/ThreadedCompositor.h:
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/CompositingCoordinator.cpp:
(WebKit::CompositingCoordinator::flushPendingLayerChanges):
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/LayerTreeHost.cpp:
(WebKit::LayerTreeHost::commitSceneState):
(WebKit::LayerTreeHost::didRenderFrame):
(WebKit::LayerTreeHost::didRenderFrameTimerFired):
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/LayerTreeHost.h:

Canonical link: https://commits.webkit.org/278399@main